# selfdriveguard

./: README.md
sdg_engine/: README.md  main.py  pyproject.toml
sdg_engine/src/input_temp/: input.sc
sdg_engine/src/main/: ads_adapter.py  autoware_adapter.py  carla_adapter.py  engine.py  pylot_adapter.py  scenest_carla_adapter.py  scenic_carla_adapter.py
sdg_engine/src/scenest_parser/: __init__.py  readme.md
sdg_engine/src/scenest_parser/ast/: __init__.py  ast.py  driver.py
sdg_engine/src/scenest_parser/ast/assertion/: assertion.py
sdg_engine/src/scenest_parser/ast/base/: motion.py  pedestrian_type.py  shape.py  state.py  (+3 more)
sdg_engine/src/scenest_parser/docs/: scenest-assertion.md  scenest-grammar.md  scenest-reference.md  scenest-scenario.md
sdg_engine/src/scenest_parser/grammar/: AVScenarios.g4
sdg_engine/src/scenest_parser/inputs/: input.txt  input10(npc rear end absolutely).txt  input2(ego+3NPC).txt  input5(set position by laneID).txt  input6(normal driving).txt  input7(npc rear end).txt  input8(auto many).txt  input9(car following).txt
sdg_engine/src/scenic_parser/: parser.py  readme.md
sdg_engine/src/scenic_parser/inputs/: 1. Sidewalk Cut In.scenic  2. Lead Car Stop.scenic  3. Cross Road.scenic  4. Block.scenic  5. Cut Out.scenic  ego_follow.scenic  follow.scenic  many.scenic
sdg_engine/src/test_engine/: conf_parse.py  content.ini  listen_engine_websocket.py
sdg_engine/src/tests/: test.txt  test_engine.py  web_client.py  websocket_long.py
sdg_engine/src/tools/: AutoController.py  auto_criteria.py  global_var.py  traffic_events.py  utils.py
(+138 files in other folders)
